_generated-doc/3.15/config/quarkus-kubernetes-client.adoc
:summaryTableId: quarkus-kubernetes-client_quarkus-kubernetes-client
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-trust-certs]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-trust-certs[`quarkus.kubernetes-client.trust-certs`]##

[.description]
--
Whether the client should trust a self-signed certificate if so presented by the API server


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_TRUST_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_TRUST_CERTS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-api-server-url]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-api-server-url[`quarkus.kubernetes-client.api-server-url`]##

[.description]
--
URL of the Kubernetes API server


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_API_SERVER_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_API_SERVER_URL+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-namespace]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-namespace[`quarkus.kubernetes-client.namespace`]##

[.description]
--
Default namespace to use


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_NAMESPACE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_NAMESPACE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-ca-cert-file]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-ca-cert-file[`quarkus.kubernetes-client.ca-cert-file`]##

[.description]
--
CA certificate file


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_CA_CERT_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_CA_CERT_FILE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-ca-cert-data]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-ca-cert-data[`quarkus.kubernetes-client.ca-cert-data`]##

[.description]
--
CA certificate data


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_CA_CERT_DATA+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_CA_CERT_DATA+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-client-cert-file]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-client-cert-file[`quarkus.kubernetes-client.client-cert-file`]##

[.description]
--
Client certificate file


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_CLIENT_CERT_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_CLIENT_CERT_FILE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-client-cert-data]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-client-cert-data[`quarkus.kubernetes-client.client-cert-data`]##

[.description]
--
Client certificate data


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_CLIENT_CERT_DATA+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_CLIENT_CERT_DATA+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-client-key-file]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-client-key-file[`quarkus.kubernetes-client.client-key-file`]##

[.description]
--
Client key file


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_CLIENT_KEY_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_CLIENT_KEY_FILE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-client-key-data]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-client-key-data[`quarkus.kubernetes-client.client-key-data`]##

[.description]
--
Client key data


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_CLIENT_KEY_DATA+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_CLIENT_KEY_DATA+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-client-key-algo]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-client-key-algo[`quarkus.kubernetes-client.client-key-algo`]##

[.description]
--
Client key algorithm


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_CLIENT_KEY_ALGO+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_CLIENT_KEY_ALGO+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-client-key-passphrase]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-client-key-passphrase[`quarkus.kubernetes-client.client-key-passphrase`]##

[.description]
--
Client key passphrase


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_CLIENT_KEY_PASSPHRASE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_CLIENT_KEY_PASSPHRASE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-username]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-username[`quarkus.kubernetes-client.username`]##

[.description]
--
Kubernetes auth username


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_USERNAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-password]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-password[`quarkus.kubernetes-client.password`]##

[.description]
--
Kubernetes auth password


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-token]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-token[`quarkus.kubernetes-client.token`]##

[.description]
--
Kubernetes oauth token


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_TOKEN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_TOKEN+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-watch-reconnect-interval]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-watch-reconnect-interval[`quarkus.kubernetes-client.watch-reconnect-interval`]##

[.description]
--
Watch reconnect interval


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_WATCH_RECONNECT_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_WATCH_RECONNECT_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`PT1S`

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-watch-reconnect-limit]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-watch-reconnect-limit[`quarkus.kubernetes-client.watch-reconnect-limit`]##

[.description]
--
Maximum reconnect attempts in case of watch failure By default there is no limit to the number of reconnect attempts


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_WATCH_RECONNECT_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_WATCH_RECONNECT_LIMIT+++`
endif::add-copy-button-to-env-var[]
--
|int
|`-1`

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-connection-timeout]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-connection-timeout[`quarkus.kubernetes-client.connection-timeout`]##

[.description]
--
Maximum amount of time to wait for a connection with the API server to be established


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_CONNECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_CONNECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`PT10S`

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-request-timeout]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-request-timeout[`quarkus.kubernetes-client.request-timeout`]##

[.description]
--
Maximum amount of time to wait for a request to the API server to be completed


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_REQUEST_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_REQUEST_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`PT10S`

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-request-retry-backoff-limit]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-request-retry-backoff-limit[`quarkus.kubernetes-client.request-retry-backoff-limit`]##

[.description]
--
Maximum number of retry attempts for API requests that fail with an HTTP code of >= 500


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_REQUEST_RETRY_BACKOFF_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_REQUEST_RETRY_BACKOFF_LIMIT+++`
endif::add-copy-button-to-env-var[]
--
|int
|`0`

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-request-retry-backoff-interval]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-request-retry-backoff-interval[`quarkus.kubernetes-client.request-retry-backoff-interval`]##

[.description]
--
Time interval between retry attempts for API requests that fail with an HTTP code of >= 500


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_REQUEST_RETRY_BACKOFF_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_REQUEST_RETRY_BACKOFF_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`PT1S`

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-http-proxy]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-http-proxy[`quarkus.kubernetes-client.http-proxy`]##

[.description]
--
HTTP proxy used to access the Kubernetes API server


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_HTTP_PROXY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_HTTP_PROXY+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-https-proxy]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-https-proxy[`quarkus.kubernetes-client.https-proxy`]##

[.description]
--
HTTPS proxy used to access the Kubernetes API server


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_HTTPS_PROXY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_HTTPS_PROXY+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-proxy-username]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-proxy-username[`quarkus.kubernetes-client.proxy-username`]##

[.description]
--
Proxy username


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_PROXY_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_PROXY_USERNAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-proxy-password]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-proxy-password[`quarkus.kubernetes-client.proxy-password`]##

[.description]
--
Proxy password


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_PROXY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_PROXY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-no-proxy]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-no-proxy[`quarkus.kubernetes-client.no-proxy`]##

[.description]
--
IP addresses or hosts to exclude from proxying


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_NO_PROXY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_NO_PROXY+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-generate-rbac]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-generate-rbac[`quarkus.kubernetes-client.generate-rbac`]##

[.description]
--
Enable the generation of the RBAC manifests. If enabled and no other role binding are provided using the properties `quarkus.kubernetes.rbac.`, it will generate a default role binding using the role "view" and the application service account.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_GENERATE_RBAC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_GENERATE_RBAC+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

h|[[quarkus-kubernetes-client_section_quarkus-kubernetes-client-devservices]] [.section-name.section-level0]##link:#quarkus-kubernetes-client_section_quarkus-kubernetes-client-devservices[Dev Services]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-devservices-enabled]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-devservices-enabled[`quarkus.kubernetes-client.devservices.enabled`]##

[.description]
--
If Dev Services for Kubernetes should be used. (default to true) If this is true and kubernetes client is not configured then a kubernetes cluster will be started and will be used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_DEVSERVICES_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_DEVSERVICES_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-devservices-api-version]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-devservices-api-version[`quarkus.kubernetes-client.devservices.api-version`]##

[.description]
--
The kubernetes api server version to use. If not set, Dev Services for Kubernetes will use the latest supported version of the given flavor. see https://github.com/dajudge/kindcontainer/blob/master/k8s-versions.json


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_DEVSERVICES_API_VERSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_DEVSERVICES_API_VERSION+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-devservices-flavor]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-devservices-flavor[`quarkus.kubernetes-client.devservices.flavor`]##

[.description]
--
The flavor to use (kind, k3s or api-only). Default to api-only.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_DEVSERVICES_FLAVOR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_DEVSERVICES_FLAVOR+++`
endif::add-copy-button-to-env-var[]
--
a|tooltip:kind[kind (needs priviledge docker)], tooltip:k3s[k3s (needs priviledge docker)], tooltip:api-only[api only]
|tooltip:api-only[api only]

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-devservices-override-kubeconfig]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-devservices-override-kubeconfig[`quarkus.kubernetes-client.devservices.override-kubeconfig`]##

[.description]
--
By default, if a kubeconfig is found, Dev Services for Kubernetes will not start. Set this to true to override the kubeconfig config.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_DEVSERVICES_OVERRIDE_KUBECONFIG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_DEVSERVICES_OVERRIDE_KUBECONFIG+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-devservices-shared]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-devservices-shared[`quarkus.kubernetes-client.devservices.shared`]##

[.description]
--
Indicates if the Kubernetes cluster managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for Kubernetes starts a new container.

The discovery uses the `quarkus-dev-service-kubernetes` label. The value is configured using the `service-name` property.

Container sharing is only used in dev mode.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_DEVSERVICES_SHARED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_DEVSERVICES_SHARED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-devservices-service-name]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-devservices-service-name[`quarkus.kubernetes-client.devservices.service-name`]##

[.description]
--
The value of the `quarkus-dev-service-kubernetes` label attached to the started container. This property is used when `shared` is set to `true`. In this case, before starting a container, Dev Services for Kubernetes looks for a container with the `quarkus-dev-service-kubernetes` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise, it starts a new container with the `quarkus-dev-service-kubernetes` label set to the specified value.

This property is used when you need multiple shared Kubernetes clusters.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_DEVSERVICES_SERVICE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_DEVSERVICES_SERVICE_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|`kubernetes`

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client_quarkus-kubernetes-client-devservices-container-env-environment-variable-name]] [.property-path]##link:#quarkus-kubernetes-client_quarkus-kubernetes-client-devservices-container-env-environment-variable-name[`quarkus.kubernetes-client.devservices.container-env."environment-variable-name"`]##

[.description]
--
Environment variables that are passed to the container.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_CLIENT_DEVSERVICES_CONTAINER_ENV__ENVIRONMENT_VARIABLE_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_CLIENT_DEVSERVICES_CONTAINER_ENV__ENVIRONMENT_VARIABLE_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|


|===

ifndef::no-duration-note[]
[NOTE]
[id=duration-note-anchor-quarkus-kubernetes-client_quarkus-kubernetes-client]
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]

:!summaryTableId: